fixed overflow of background

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
+  overflow: hidden;
 }
 
 h2 {
@@ -43,6 +44,7 @@ p {
 .container {
   margin: 50px auto;
   max-width: 600px;
+
   border: 2px solid;
   border-radius: 30px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
